# app-pack-generator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  app.ipynb  build.sh  parser.py  pyproject.toml  query.py  requirements.txt  setup.py
app_pack_generator/: __init__.py  application.py  cwl.py  descriptor.py  docker.py  git.py  parser.py  process.py  util.py
app_pack_generator/templates/: app_desc.json  process.cwl  stage_in.cwl  stage_out.cwl  workflow.cwl
templates/: Dockerfile  app.cwl  process.cwl  stage_in.cwl  stage_out.cwl  workflow.cwl
test/: conftest.py  test_docker.py  test_git.py
