[build-system]
requires = ["setuptools>=62.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app_pack_generator"
authors = [ 
    { name = "James McDuffie" },
    { name = "Max Zhan" },
]
description = "Generates an OGC application package from a Jupyter Notebook by parsing its it's papermill parameterized metadata."
readme = "README.md"
keywords = ["unity-sds", "ogc", "packaging", "cwl", "jupyter"]
license = { text = "MIT License" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

requires-python = ">=3.9"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "app_pack_generator.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["schemas/*", "templates/*"]
